fix fixed help alignment

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,7 +6,7 @@
    ---------------------------------------------------------*/
 	body {
     /* anti-flicker, see: http://stackoverflow.com/questions/3461441/prevent-flicker-on-webkit-transition-of-webkit-transform */
-    -webkit-transform:translate3d(0,0,0);
+    /* -webkit-transform:translate3d(0,0,0); */
 	}
 	/* Default link styling */
 /*	
@@ -309,17 +309,6 @@ a.button:hover {
   top: 60px;
   right: -553px;
   width: 583px;
-  -moz-transition:    -moz-transform    0.3s;
-  -webkit-transition: -webkit-transform 0.3s;
-  -o-transition:      -o-transform      0.3s;
-  transition:         transform         0.3s;
-}
-
-.help.active {
-  -moz-transform:    translateX(-540px);
-  -webkit-transform: translateX(-540px);
-  -o-transform:      translateX(-540px);
-  transform:         translateX(-540px);
 }
 
 .help .tab {
